@@ -1,4 +1,5 @@
 0.25
+ - Add use case for publication place.
 
 0.24 2025-03-17T17:49:03+01:00
  - Add support for multiple subfields.
